[package]
name = "rustoku-cli"
description = "A teminal user interface for roku's"
homepage = "https://github.com/shee0049/rustoku-cli"
documentation = "https://github.com/shee0049/rustoku-cli"
repository = "https://github.com/shee0049/rustoku-cli"
keywords = ["roku", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "1.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
termion = "1.5.5"
curl = "0.4.44"
